@@ -419,3 +419,5 @@ paste.Action.shortDescription = Paste the contents of the clipboard at the curre
 delete.Action.text = &Delete
 delete.Action.shortDescription = Delete current selection
 
+errorInvalidJRE=This application cannot be started with JRE 1.6.0_0 on Linux.\nThis JRE version is buggy therefore FRD wouldn't work properly.\nUpgrade to newer version.\nExiting.
+errorInvalidPath=This application cannot be started on the path containing '+' or '!' characters ('%s'...)\nExiting.
