@@ -1,4 +1,9 @@
 Version 0.8->
+
+MainApp.properties
+==============================
+added
+
 ##Cut&Copy actions
 cut.Action.text = Cu&t
 cut.Action.shortDescription = Move the current selection to the clipboard
@@ -12,7 +17,8 @@ paste.Action.shortDescription = Paste the contents of the clipboard at the curre
 delete.Action.text = &Delete
 delete.Action.shortDescription = Delete current selection
 
-
+errorInvalidJRE=This application cannot be started with JRE 1.6.0_0 on Linux.\nThis JRE version is buggy therefore FRD wouldn't work properly.\nUpgrade to newer version.\nExiting.
+errorInvalidPath=This application cannot be started on the path containing '+' or '!' characters ('%s'...)\nExiting.
 
 
 
